--- a/src/css/home.css
+++ b/src/css/home.css
@@ -47,10 +47,25 @@ body {
 }
 
 
-
-.contents{
-  margin: 30px;
+.item{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+
+.item:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.contents-data{
+  align-content: center;
+  justify-content: center;
+ 
+  margin: auto;
+  padding: 20px;
+}
+
+
 .avisoCopy {
   margin-top: 30px;
   justify-self: center;
