--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,12 +1,43 @@
-.form-group {
-  margin-top: 20px;
-  font-weight: bold;
+
+.seccionBotones{
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
+.mainContent{
+  align-content: center;
+  flex-direction: column;
+  margin: auto;
+  
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: flex-start;
+  align-items: flex-start;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.form-group label{
+  margin-bottom: 5px;
+
+}
+
+div[data-questionType="complexDropDown"] div.contents-data{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 10px;
+}
+
 .custom-select {
-  margin-top: 30px;
+  
 }
 .custom-control {
-  margin-top: 10px;
+  
   font-weight: normal;
 }
 .form-check {
@@ -50,7 +81,7 @@ body {
 .item{
   margin-top: 15px;
   margin-bottom: 15px;
-  border-radius: 2px;
+  border-radius: 3px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
@@ -59,11 +90,11 @@ body {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .contents-data{
-  align-content: center;
-  justify-content: center;
+  align-content: space-between;
+  flex-direction: column;
  
   margin: auto;
-  padding: 20px;
+  padding: 10px;
 }
 
 
