--- a/src/css/home.css
+++ b/src/css/home.css
@@ -44,6 +44,10 @@ div[data-questionType="complexDropDown"] div.contents-data{
   
 }
 
+.fc-event {
+  cursor: pointer;
+}
+
 .form-location{
   display: flex;
   flex-direction: row;
@@ -54,6 +58,20 @@ div[data-questionType="complexDropDown"] div.contents-data{
 .form-location > select+select{
   margin-left: 20px;
 
+}
+
+.infoContent{
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.cuestionariosWrapper{
+  justify-content: space-between;
+}
+.calendarWrapper{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .custom-control-input{
@@ -106,6 +124,12 @@ body {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+.sombreado{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
 .item:hover{
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
