--- a/src/css/home.css
+++ b/src/css/home.css
@@ -128,6 +128,14 @@ body {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+.titulos{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
 .sombreado{
   margin-top: 15px;
   margin-bottom: 15px;
